[gd_scene load_steps=29 format=3 uid="uid://doj7qr6tw57i0"]

[ext_resource type="Texture2D" uid="uid://cykhetrvil23v" path="res://assets/wizard char.png" id="1_bcis6"]
[ext_resource type="Script" path="res://scenes/Characters/wizard.gd" id="1_k8p31"]
[ext_resource type="Texture2D" uid="uid://d17edwqeelfx8" path="res://assets/AnimationSheet_Character.png" id="2_cchmq"]
[ext_resource type="Script" path="res://scenes/Characters/ui.gd" id="4_fewoe"]
[ext_resource type="PackedScene" uid="uid://ddbc8n7v2mbjy" path="res://scenes/UI element/pause screen/pause.tscn" id="4_lsvik"]
[ext_resource type="Texture2D" uid="uid://bok0thdme2c0p" path="res://assets/01_Flat_Theme/Sprites/UI_Flat_Banner04a.png" id="4_wlqlo"]
[ext_resource type="FontFile" uid="uid://dbjl1e6kdxpl6" path="res://assets/fonts/PixelOperator8.ttf" id="5_f2u60"]
[ext_resource type="PackedScene" uid="uid://43sc3jjy8c20" path="res://scenes/UI element/button/Button.tscn" id="6_af8vh"]
[ext_resource type="Script" path="res://scenes/Characters/answer.gd" id="6_c463f"]
[ext_resource type="AudioStream" uid="uid://d3ga5iqgco704" path="res://assets/sounds/hurt.wav" id="11_1rb3u"]
[ext_resource type="AudioStream" uid="uid://b55xtmvwkoslc" path="res://assets/sounds/jump.wav" id="11_lyf5p"]
[ext_resource type="Texture2D" uid="uid://cm8ig2oxdx387" path="res://assets/01_Flat_Theme/Sprites/UI_Flat_ButtonArrow01a.png" id="11_ti6sq"]
[ext_resource type="Script" path="res://scenes/Characters/pause_button.gd" id="13_3r0dk"]
[ext_resource type="PackedScene" uid="uid://bjrivrdvgjiix" path="res://scenes/UI element/health bar/health_bar.tscn" id="13_mkf34"]

[sub_resource type="AtlasTexture" id="AtlasTexture_yj28t"]
atlas = ExtResource("1_bcis6")
region = Rect2(10, 0, 44, 65)

[sub_resource type="SpriteFrames" id="SpriteFrames_xpsoq"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_yj28t")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_4sora"]
atlas = ExtResource("2_cchmq")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ibjx1"]
atlas = ExtResource("2_cchmq")
region = Rect2(32, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_jpu42"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4sora")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ibjx1")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_wpdlf"]
radius = 4.0
height = 22.0

[sub_resource type="CircleShape2D" id="CircleShape2D_8lpuh"]
radius = 48.0

[sub_resource type="LabelSettings" id="LabelSettings_2rh6u"]
font = ExtResource("5_f2u60")

[sub_resource type="LabelSettings" id="LabelSettings_narmd"]
font = ExtResource("5_f2u60")

[sub_resource type="LabelSettings" id="LabelSettings_8udmv"]
font = ExtResource("5_f2u60")
font_size = 32
font_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_vdylm"]
font = ExtResource("5_f2u60")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wg625"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_e7owg"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mu5hr"]

[node name="Wizard" type="CharacterBody2D" node_paths=PackedStringArray("selected_sprite")]
script = ExtResource("1_k8p31")
selected_sprite = [NodePath("blue_wizard"), NodePath("gray_wizard")]

[node name="gray_wizard" type="AnimatedSprite2D" parent="."]
visible = false
scale = Vector2(0.604857, 0.684195)
sprite_frames = SubResource("SpriteFrames_xpsoq")
animation = &"idle"
autoplay = "idle"

[node name="blue_wizard" type="AnimatedSprite2D" parent="."]
visible = false
scale = Vector2(0.646701, 0.736779)
sprite_frames = SubResource("SpriteFrames_jpu42")
animation = &"idle"
autoplay = "idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_wpdlf")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_8lpuh")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(1, 37)
zoom = Vector2(2, 2)

[node name="UI" type="CanvasLayer" parent="."]
editor_description = "HUD for player"
script = ExtResource("4_fewoe")

[node name="MarginContainer" type="MarginContainer" parent="UI"]
offset_left = 165.0
offset_top = 4.0
offset_right = 477.0
offset_bottom = 40.0
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20

[node name="Label" type="Label" parent="UI/MarginContainer"]
layout_mode = 2
text = "answer all the question"
label_settings = SubResource("LabelSettings_2rh6u")

[node name="MarginContainer3" type="MarginContainer" parent="UI"]
offset_right = 20.0
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20

[node name="Health Bar" parent="UI/MarginContainer3" instance=ExtResource("13_mkf34")]
unique_name_in_owner = true
layout_mode = 2

[node name="MarginContainer2" type="MarginContainer" parent="UI"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -180.0
offset_bottom = 40.0
grow_horizontal = 0

[node name="Score" type="Label" parent="UI/MarginContainer2"]
layout_mode = 2
theme_override_font_sizes/font_size = 10
text = "score : ???"
label_settings = SubResource("LabelSettings_narmd")

[node name="question" type="Node2D" parent="UI"]

[node name="NinePatchRect" type="NinePatchRect" parent="UI/question"]
offset_left = 394.0
offset_top = 446.0
offset_right = 767.0
offset_bottom = 534.0
texture = ExtResource("4_wlqlo")
region_rect = Rect2(0, 0, 64, 20)
patch_margin_left = 4
patch_margin_top = 3
patch_margin_right = 3
patch_margin_bottom = 2

[node name="Label" type="Label" parent="UI/question"]
z_index = 1
offset_left = 443.0
offset_top = 474.167
offset_right = 727.0
offset_bottom = 506.167
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("5_f2u60")
text = "no question"
label_settings = SubResource("LabelSettings_8udmv")
horizontal_alignment = 1
vertical_alignment = 1

[node name="answer A" parent="UI/question" instance=ExtResource("6_af8vh")]
anchors_preset = 0
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 390.0
offset_top = 547.0
offset_right = 440.0
offset_bottom = 577.0
grow_horizontal = 1
grow_vertical = 1
text = "100"
script = ExtResource("6_c463f")
answer = 0

[node name="answer B" parent="UI/question" instance=ExtResource("6_af8vh")]
anchors_preset = 0
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 456.0
offset_top = 546.0
offset_right = 506.0
offset_bottom = 576.0
grow_horizontal = 1
grow_vertical = 1
text = "100"
script = ExtResource("6_c463f")
answer = 0

[node name="answer C" parent="UI/question" instance=ExtResource("6_af8vh")]
anchors_preset = 0
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 594.0
offset_top = 548.0
offset_right = 644.0
offset_bottom = 578.0
grow_horizontal = 1
grow_vertical = 1
text = "100"
script = ExtResource("6_c463f")
answer = 0

[node name="answer D" parent="UI/question" instance=ExtResource("6_af8vh")]
anchors_preset = 0
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 524.0
offset_top = 547.0
offset_right = 574.0
offset_bottom = 577.0
grow_horizontal = 1
grow_vertical = 1
text = "100"
script = ExtResource("6_c463f")
answer = 0

[node name="MarginContainer" type="MarginContainer" parent="UI/question"]
offset_left = 658.0
offset_top = 548.0
offset_right = 772.0
offset_bottom = 578.0
theme_override_constants/margin_left = 10

[node name="confirm" parent="UI/question/MarginContainer" instance=ExtResource("6_af8vh")]
layout_mode = 2
text = "Confirm"

[node name="HBoxContainer" type="HBoxContainer" parent="UI/question"]
offset_right = 40.0
offset_bottom = 40.0

[node name="Button" parent="UI" instance=ExtResource("6_af8vh")]
anchor_left = 0.5
anchor_top = 0.0
anchor_right = 0.5
anchor_bottom = 0.009
offset_left = -31.0
offset_top = 7.0
offset_right = 50.0
offset_bottom = 38.168
grow_vertical = 1
text = "â˜°"
script = ExtResource("13_3r0dk")

[node name="Time Left" type="Label" parent="UI"]
unique_name_in_owner = true
visible = false
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -203.0
offset_top = 44.0
offset_right = -19.0
offset_bottom = 67.0
grow_horizontal = 0
text = "Time Left : ???"
label_settings = SubResource("LabelSettings_vdylm")

[node name="jump" type="TouchScreenButton" parent="UI"]
position = Vector2(923, 579.036)
rotation = -1.5708
scale = Vector2(7, 7)
texture_normal = ExtResource("11_ti6sq")
shape = SubResource("RectangleShape2D_wg625")
action = "jump"

[node name="HBoxContainer" type="HBoxContainer" parent="UI"]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -237.0
offset_right = 347.0
grow_vertical = 0
alignment = 1

[node name="move left" type="TouchScreenButton" parent="UI/HBoxContainer"]
position = Vector2(173, 63)
scale = Vector2(-6, 6)
texture_normal = ExtResource("11_ti6sq")
shape = SubResource("RectangleShape2D_e7owg")
passby_press = true
action = "move_left"

[node name="move right" type="TouchScreenButton" parent="UI/HBoxContainer"]
position = Vector2(203, 61)
scale = Vector2(6, 6)
texture_normal = ExtResource("11_ti6sq")
shape = SubResource("RectangleShape2D_mu5hr")
passby_press = true
action = "move_right"

[node name="pause" parent="." instance=ExtResource("4_lsvik")]
layer = 2
visible = false

[node name="jump" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("11_lyf5p")
bus = &"SFX"

[node name="hurt" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("11_1rb3u")
bus = &"SFX"

[connection signal="answer_change" from="." to="." method="_on_answer_change"]
[connection signal="ready" from="." to="." method="_on_ready"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="pressed" from="UI/question/MarginContainer/confirm" to="." method="_on_confirm_pressed"]
[connection signal="pressed" from="UI/Button" to="UI/Button" method="_on_pressed"]
[connection signal="visibility_changed" from="pause" to="UI" method="_on_pause_visibility_changed"]
